--- a/src/AioCore.Packages/Package.Localization/Localization.vi-VN.resx
+++ b/src/AioCore.Packages/Package.Localization/Localization.vi-VN.resx
@@ -117,10 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="SecurityUser.Delete.Message.Fail" xml:space="preserve">
+  <data name="SystemUser.Delete.Message.Fail" xml:space="preserve">
     <value>Xóa user không thành công</value>
   </data>
-  <data name="SecurityUser.Delete.Message.Success" xml:space="preserve">
+  <data name="SystemUser.Delete.Message.Success" xml:space="preserve">
     <value>Xóa user thành công</value>
   </data>
   <data name="SignIn.Message.Fail" xml:space="preserve">
