add migration for integration event log

--- a/src/AioCore.Packages/Package.Localization/Localization.vi-VN.resx
+++ b/src/AioCore.Packages/Package.Localization/Localization.vi-VN.resx
@@ -124,7 +124,7 @@
     <value>Xóa user thành công</value>
   </data>
   <data name="SignIn.Message.Fail" xml:space="preserve">
-    <value>Đăng ký không thành công</value>
+    <value>Đăng nhập không thành công</value>
   </data>
   <data name="SignIn.Message.Success" xml:space="preserve">
     <value>Đăng nhập thành công</value>
